@@ -1,3 +1,8 @@
+2012-11-06 Riccardo Mottola <rm@gnu.org>
+
+	* DBCVSReader.m
+	Handle terminal empty fields in record.
+
 2012-11-05 Riccardo Mottola <rm@gnu.org>
 
 	* DBCVSReader.m
